apps/apprise/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: apprise
  namespace: apprise
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: apprise
      app.kubernetes.io/name: apprise
  ingress:
    - fromEntities:
        - host
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cross-seed
        - matchLabels:
            io.kubernetes.pod.namespace: qbit-manage
        - matchLabels:
            io.kubernetes.pod.namespace: ledger
            app.kubernetes.io/controller: ledger
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
            tailscale.com/parent-resource: apprise
            tailscale.com/parent-resource-ns: apprise
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
